<resources>
    <string name="app_name">InfoJobs</string>
    <string name="facebook_app_id">1656270054699142</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_Login">Login</string>
    <string name="prompt_password_senha">Senha</string>
    <string name="title_activiy_Login">Realize seu login</string>
    <string name="activity_login_registrar"><u>Crie seu cadastro</u> ou</string>
    <string name="activity_login_novo_no_app">Primeira vez no InfoJobs?</string>
    <string name="title_activity_consuta_vagas_view">ConsutaVagasView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_gaveta_principal">GavetaPrincipal</string>
    <string name="activity_login_esqueceu_senha">Esqueceu sua Senha?</string>
    <string name="button_string_Salvar">Salvar</string>
    <string name="title_activity_detalhes_vaga">DetalhesVaga</string>
</resources>
